# nanobot-lite

./: .gitignore  README.md  install.sh  pyproject.toml
nanobot_lite/: __init__.py  __main__.py  cli.py  dotenv.py  plugin_system.py  scheduler.py  structured_logging.py  webhook.py
nanobot_lite/agent/: healer.py  loop.py  memory.py  planner.py  self_awareness.py  self_diagnosis.py
nanobot_lite/bus/: __init__.py  events.py  queue.py
nanobot_lite/channels/: __init__.py  telegram.py
nanobot_lite/config/: schema.py
nanobot_lite/providers/: __init__.py  anthropic_provider.py  base.py  opencode_zen_provider.py
nanobot_lite/tools/: __init__.py  advanced.py  base.py  code_runner.py  filesystem.py  run_diagnostics.py  shell.py  web.py
nanobot_lite/utils/: helpers.py
tests/: test_core.py
