[project]
name = "nanobot-lite"
version = "0.1.0"
description = "Ultra-lightweight AI agent for Telegram — runs on Termux 32-bit Android"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Victor"},
    {name = "nanobot-lite contributors"},
]

dependencies = [
    # Logging & CLI (pure Python)
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=1.10.0",

    # Telegram bot (has pre-built ARM32 wheels)
    "python-telegram-bot>=20.0.0",

    # Search (pure Python)
    "ddgs>=9.0.0",

    # HTML parsing (pure Python, no C deps)
    "selectolax>=0.3.0",

    # Scheduling (pure Python)
    "croniter>=1.0.0",

    # Storage / config (pure Python)
    "pyyaml>=6.0",
    "filelock>=3.0.0",
    "jinja2>=3.0.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nanobot-lite = "nanobot_lite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_lite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]