[project]
name = "nanobot-lite"
version = "0.1.0"
description = "Ultra-lightweight AI agent for Telegram — runs on Termux 32-bit Android"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Victor"},
]

dependencies = [
    # Logging
    "loguru>=0.7.0",

    # CLI
    "typer>=0.9.0",
    "questionary>=1.10.0",

    # Telegram bot
    "python-telegram-bot>=20.0.0",

    # Web
    "ddgs>=9.0.0",
    "selectolax>=0.3.0",

    # Config (YAML)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nanobot-lite = "nanobot_lite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_lite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]