[project]
name = "nanobot-lite"
version = "0.1.0"
description = "Ultra-lightweight AI agent for Telegram — runs on Termux 32-bit Android"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Victor"},
]

dependencies = [
    # Logging (pure Python, py3-none-any.whl)
    "loguru>=0.7.0",

    # CLI (pure Python, py3-none-any.whl)
    "typer>=0.9.0",
    "questionary>=1.10.0",

    # Telegram bot (pure Python, py3-none-any.whl)
    "python-telegram-bot>=20.0.0",

    # Config (has manylinux ARM wheels)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nanobot-lite = "nanobot_lite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_lite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]